examples/test/testpolicy13206.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13206
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key36: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value16
      podSelector:
        matchLabels:
          key39: value43
          key5: value35
          key31: value48
